[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Kyle Smith <kyle.smith@salsify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = ""
regex = "1"
array2d = ""
lazy_static = ""
enum_from_str = "0.1.0"
enum_from_str_derive = "0.1.0"
